Refactor: fix sonar warnings and remove dead code